    * applied 3 patches from Daniel Drake for AVT functions:
       1. new functions that write/read more than one register at a time
       2. correct shading control and fully implement it
       3. read/write shading images
	
2006-11-03 Damien Douxchamps<ddouxchamps@users.sf.net>
    * Release 2.0.0-pre4
	
2006-11-03 Damien Douxchamps<ddouxchamps@users.sf.net>
    * Create more handles to avoid conflicts in the grabselfid function
      (thanks to Irv Elshoff)
    * Added the function dc1394_format7_get_roi()

2006-11-08 David Moore <dcm@acm.org>
    * Fixed Mac OS X regression caused by 2006-11-02 patches
	
2006-11-17 Damien Douxchamps<ddouxchamps@users.sf.net>
    * Fixed the number of memory channels detected (Thanks to Georg Glock)

2006-11-21 Damien Douxchamps<ddouxchamps@users.sf.net>
    * Removed legacy raw1394 code
    * Removed references to DMA since all capture functions are now DMA
    * Renamed DC1394_VIDEO1394_* to DC1394_CAPTURE_POLICY_*
    * Enqueue and Dequeue functions now both return an error code
    * Adapted the examples
    * Removed the two DMA examples
	
2006-11-22 Damien Douxchamps<ddouxchamps@users.sf.net>
    * fixed the bad prototype of dc1394_capture_dequeue: we need a
      frame** and not a frame*, of course. (SVN328)
    * ... don't forget to do this for OSX too. (SVN329)
	
2006-12-04 Damien Douxchamps<ddouxchamps@users.sf.net>
    * fixed inconsistancy in bayer decoding functions (Georg Glock) (SVN 330)
    * removed the error code related to raw1394 capture (SVN 331)
    * fixed error check in dc1394_set_roi (Mikael Olenfalk)
    * removed extra error string definition for raw1394 failure (SVN 332)

2006-12-06 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 333: fixed a bug in absolute settings. The caching of offsets has
      been removed (Don Murray)
	
2006-12-07 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 334: Fixed memory leak in Linux capture code (Fabien Spindler)