@@ -61,6 +61,22 @@ int *_dc1394_num_using_fd = NULL;
 /**********************/
 
 
+void
+_dc1394_capture_cleanup_alloc(void)
+{
+  // free allocated memory if no one is using the capture anymore:
+  int i, use=0;
+  for (i=0;i<MAX_NUM_PORTS;i++) {
+    use+=_dc1394_num_using_fd[i];
+  }
+  if (use==0) {
+    free(_dc1394_num_using_fd);
+    _dc1394_num_using_fd=NULL;
+    free(_dc1394_dma_fd);
+    _dc1394_dma_fd=NULL;
+  }
+}
+
 dc1394error_t
 _dc1394_open_dma_device(dc1394camera_t *camera)
 {
@@ -144,11 +160,7 @@ _dc1394_capture_dma_setup(dc1394camera_t *camera, uint32_t num_dma_buffers)
 
   if (_dc1394_open_dma_device(camera) != DC1394_SUCCESS) {
     fprintf (stderr, "Could not open video1394 device file in /dev\n");
-    // free allocated memory:
-    free(_dc1394_num_using_fd);
-    _dc1394_num_using_fd=NULL;
-    free(_dc1394_dma_fd);
-    _dc1394_dma_fd=NULL;
+    _dc1394_capture_cleanup_alloc(); // free allocated memory if necessary
     return DC1394_INVALID_VIDEO1394_DEVICE;
   }
   
@@ -162,11 +174,7 @@ _dc1394_capture_dma_setup(dc1394camera_t *camera, uint32_t num_dma_buffers)
   if (ioctl(craw->capture.dma_fd, VIDEO1394_IOC_LISTEN_CHANNEL, &vmmap) < 0) {
     printf("(%s) VIDEO1394_IOC_LISTEN_CHANNEL ioctl failed: %s\n", __FILE__,
             strerror (errno));
-    // free allocated memory:
-    free(_dc1394_num_using_fd);
-    _dc1394_num_using_fd=NULL;
-    free(_dc1394_dma_fd);
-    _dc1394_dma_fd=NULL;
+    _dc1394_capture_cleanup_alloc(); // free allocated memory if necessary
     return DC1394_IOCTL_FAILURE;
   }
   // starting from here we use the ISO channel so we set the flag in the camera struct:
@@ -187,11 +195,7 @@ _dc1394_capture_dma_setup(dc1394camera_t *camera, uint32_t num_dma_buffers)
       printf("(%s) VIDEO1394_IOC_LISTEN_QUEUE_BUFFER ioctl failed!\n", __FILE__);
       ioctl(craw->capture.dma_fd, VIDEO1394_IOC_UNLISTEN_CHANNEL, &(vwait.channel));
       camera->capture_is_set=0;
-      // free allocated memory:
-      free(_dc1394_num_using_fd);
-      _dc1394_num_using_fd=NULL;
-      free(_dc1394_dma_fd);
-      _dc1394_dma_fd=NULL;
+      _dc1394_capture_cleanup_alloc(); // free allocated memory if necessary
       return DC1394_IOCTL_FAILURE;
     }
     
@@ -205,11 +209,7 @@ _dc1394_capture_dma_setup(dc1394camera_t *camera, uint32_t num_dma_buffers)
     printf("(%s) mmap failed!\n", __FILE__);
     ioctl(craw->capture.dma_fd, VIDEO1394_IOC_UNLISTEN_CHANNEL, &vmmap.channel);
     camera->capture_is_set=0;
-    // free allocated memory:
-    free(_dc1394_num_using_fd);
-    _dc1394_num_using_fd=NULL;
-    free(_dc1394_dma_fd);
-    _dc1394_dma_fd=NULL;
+    _dc1394_capture_cleanup_alloc(); // free allocated memory if necessary
     return DC1394_IOCTL_FAILURE;
   }
   
@@ -330,11 +330,8 @@ dc1394_capture_stop(dc1394camera_t *camera)
     // free the additional capture handle
     raw1394_destroy_handle(craw->capture.handle);
 
-    // free allocated memory:
-    free(_dc1394_num_using_fd);
-    _dc1394_num_using_fd=NULL;
-    free(_dc1394_dma_fd);
-    _dc1394_dma_fd=NULL;
+    _dc1394_capture_cleanup_alloc();
+
   }
   else {
     return DC1394_CAPTURE_IS_NOT_SET;
